  Takeshi Abe)
- Fixed bug #45622 (isset($arrayObject->p) misbehaves with ArrayObject::
  ARRAY_AS_PROPS set). (robin_fernandes at uk dot ibm dot com, Arnaud)
- Fixed bug #45614 (ArrayIterator::current(), ::key() can show 1st private
  prop of wrapped object). (robin_fernandes at uk dot ibm dot com, Arnaud)
- Fixed bug #45540 (stream_context_create creates bad http request). (Arnaud)
- Fixed bug #45191 (error_log ignores date.timezone php.ini val when
  setting logging timestamps). (Derick)
- Fixed bug #45092 (header HTTP context option not being used when compiled
  using --with-curlwrappers). (Jani)
- Fixed bug #44996 (xmlrpc_decode() ignores time zone on iso8601.datetime).
  (Ilia, kawai at apache dot org) 
- Fixed bug #43073 (TrueType bounding box is wrong for angle<>0).
  (Martin McNickle)
- Fixed bug #42663 (gzinflate() try to allocate all memory with truncated
  data). (Arnaud)
- Fixed bug #42414 (some odbc_*() functions incompatible with Oracle ODBC 
  driver). (jhml at gmx dot net)
- Fixed bug #42362 (HTTP status codes 204 and 304 should not be gzipped).
  (Scott, Edward Z. Yang)
- Fixed bug #38805 (PDO truncates text from SQL Server text data type
  field). (Steph)

26 Feb 2009, PHP 5.2.9
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)

- Fixed a crash on extract in zip when files or directories entry names contain 
  a relative path. (Pierre)
- Fixed error conditions handling in stream_filter_append(). (Arnaud)
- Fixed zip filename property read. (Pierre)
- Fixed explode() behavior with empty string to respect negative limit. (Shire)
- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image. Reported by Hamid Ebadi,
  APA Laboratory (Fixes CVE-2008-5498). (Scott)